--- a/src/css/go-main.css
+++ b/src/css/go-main.css
@@ -2009,13 +2009,6 @@ Responsive
   .nuances-right {
     padding-left: 0;
   }
-  .content-right {
-    padding-left: 0;
-    max-width: 100%;
-  }
-  .content-inner.row-revers {
-    flex-direction: row;
-  }
   .dlaczego-audika-area {
     margin-top: 0;
   }
@@ -2104,12 +2097,18 @@ Responsive
   .hearing-test-right,
   .content-left {
     max-width: 100%;
+    width: 100%;
   }
   .nowoczesne-right {
     max-width: 500px;
   }
   .content-text ul {
     padding-right: 0;
+  }
+  .content-right {
+    padding-left: 0;
+    max-width: 100%;
+    width: 100%;
   }
 }
 @media (max-width: 767px) {
@@ -2210,10 +2209,15 @@ Responsive
   .nuances-right li {
     width: 100%;
   }
+  .dlaczego-left {
+    height: initial;
+    margin-bottom: 30px;
+  }
   .dlaczego-left:before {
     width: 100%;
-    height: 515px;
+    height: initial;
     left: 0;
+    display: none;
   }
   .dlaczego-card {
     width: 100%;
