--- a/src/css/scss/_footer.scss
+++ b/src/css/scss/_footer.scss
@@ -23,10 +23,12 @@ Footer Area
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 1.25rem;
+  gap: 0 1.25rem;
   position: relative;
   // padding-left: 6.25rem;
   padding-bottom: 1.5625rem;
